--- a/admin-web-client/package.json
+++ b/admin-web-client/package.json
@@ -9,8 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "next": "latest",
     "react": "latest",
     "react-dom": "latest",
-    "next": "latest"
+    "semantic-ui-css": "^2.5.0"
   }
 }
